packages/swift/AlgoModels/Frameworks/algo_models.xcframework/ios-arm64_x86_64-simulator/Headers/algo_modelsFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void ffi_algo_models_ffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_algo_models_ffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_f32(uint64_t handle
);
float ffi_algo_models_ffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_f64(uint64_t handle
);
double ffi_algo_models_ffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_pointer(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_pointer(uint64_t handle
);
void*_Nonnull ffi_algo_models_ffi_rust_future_complete_pointer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_algo_models_ffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_algo_models_ffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_algo_models_ffi_rust_future_cancel_void(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_free_void(uint64_t handle
);
void ffi_algo_models_ffi_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_algo_models_ffi_checksum_func_attach_signature(void
    
);
uint16_t uniffi_algo_models_ffi_checksum_func_get_encoded_transaction_type(void
    
);
uint32_t ffi_algo_models_ffi_uniffi_contract_version(void
    
);