crates/algo_models_ffi/tests/py/algo_models_ffi.py

    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_free_i64.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_i64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_f32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_f32.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_free_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_free_f32.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_f32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_f64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_f64.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_free_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_free_f64.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_f64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_pointer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_pointer.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_pointer.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_free_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_free_pointer.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_pointer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_pointer.restype = ctypes.c_void_p
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_free_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_void.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_poll_void.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_cancel_void.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_free_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_algo_models_ffi_rust_future_free_void.restype = None
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_void.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_algo_models_ffi_rust_future_complete_void.restype = None
_UniffiLib.uniffi_algo_models_ffi_checksum_func_attach_signature.argtypes = (
)
_UniffiLib.uniffi_algo_models_ffi_checksum_func_attach_signature.restype = ctypes.c_uint16
_UniffiLib.uniffi_algo_models_ffi_checksum_func_decode_asset_transfer.argtypes = (
)
_UniffiLib.uniffi_algo_models_ffi_checksum_func_decode_asset_transfer.restype = ctypes.c_uint16
_UniffiLib.uniffi_algo_models_ffi_checksum_func_decode_payment.argtypes = (
)
_UniffiLib.uniffi_algo_models_ffi_checksum_func_decode_payment.restype = ctypes.c_uint16
_UniffiLib.uniffi_algo_models_ffi_checksum_func_encode_asset_transfer.argtypes = (
)
_UniffiLib.uniffi_algo_models_ffi_checksum_func_encode_asset_transfer.restype = ctypes.c_uint16
_UniffiLib.uniffi_algo_models_ffi_checksum_func_encode_payment.argtypes = (
)
_UniffiLib.uniffi_algo_models_ffi_checksum_func_encode_payment.restype = ctypes.c_uint16
_UniffiLib.uniffi_algo_models_ffi_checksum_func_get_encoded_transaction_type.argtypes = (
)
_UniffiLib.uniffi_algo_models_ffi_checksum_func_get_encoded_transaction_type.restype = ctypes.c_uint16
_UniffiLib.ffi_algo_models_ffi_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_algo_models_ffi_uniffi_contract_version.restype = ctypes.c_uint32

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# Public interface members begin here.


class _UniffiConverterUInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u64"
    VALUE_MIN = 0
    VALUE_MAX = 2**64

    @staticmethod
    def read(buf):
        return buf.read_u64()

    @staticmethod
    def write(value, buf):
        buf.write_u64(value)

class _UniffiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()

class _UniffiConverterBytes(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative byte string length")
        return buf.read(size)

    @staticmethod
    def check_lower(value):
        try:
            memoryview(value)
        except TypeError:
            raise TypeError("a bytes-like object is required, not {!r}".format(type(value).__name__))

    @staticmethod
    def write(value, buf):
        buf.write_i32(len(value))
        buf.write(value)


class AssetTransferTransactionFields:
    header: "TransactionHeader"
    asset_id: "int"
    amount: "int"
    receiver: "ByteBuf"
    asset_sender: "typing.Optional[ByteBuf]"
    close_remainder_to: "typing.Optional[ByteBuf]"
    def __init__(self, *, header: "TransactionHeader", asset_id: "int", amount: "int", receiver: "ByteBuf", asset_sender: "typing.Optional[ByteBuf]", close_remainder_to: "typing.Optional[ByteBuf]"):
        self.header = header
        self.asset_id = asset_id
        self.amount = amount
        self.receiver = receiver
        self.asset_sender = asset_sender
        self.close_remainder_to = close_remainder_to

    def __str__(self):
        return "AssetTransferTransactionFields(header={}, asset_id={}, amount={}, receiver={}, asset_sender={}, close_remainder_to={})".format(self.header, self.asset_id, self.amount, self.receiver, self.asset_sender, self.close_remainder_to)

    def __eq__(self, other):
        if self.header != other.header:
            return False
        if self.asset_id != other.asset_id:
            return False
        if self.amount != other.amount:
            return False
        if self.receiver != other.receiver:
            return False
        if self.asset_sender != other.asset_sender:
            return False
        if self.close_remainder_to != other.close_remainder_to:
            return False
        return True

class _UniffiConverterTypeAssetTransferTransactionFields(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return AssetTransferTransactionFields(
            header=_UniffiConverterTypeTransactionHeader.read(buf),
            asset_id=_UniffiConverterUInt64.read(buf),
            amount=_UniffiConverterUInt64.read(buf),
            receiver=_UniffiConverterTypeByteBuf.read(buf),
            asset_sender=_UniffiConverterOptionalTypeByteBuf.read(buf),
            close_remainder_to=_UniffiConverterOptionalTypeByteBuf.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiConverterTypeTransactionHeader.check_lower(value.header)
        _UniffiConverterUInt64.check_lower(value.asset_id)
        _UniffiConverterUInt64.check_lower(value.amount)
        _UniffiConverterTypeByteBuf.check_lower(value.receiver)
        _UniffiConverterOptionalTypeByteBuf.check_lower(value.asset_sender)
        _UniffiConverterOptionalTypeByteBuf.check_lower(value.close_remainder_to)

    @staticmethod
    def write(value, buf):
        _UniffiConverterTypeTransactionHeader.write(value.header, buf)
        _UniffiConverterUInt64.write(value.asset_id, buf)
        _UniffiConverterUInt64.write(value.amount, buf)
        _UniffiConverterTypeByteBuf.write(value.receiver, buf)
        _UniffiConverterOptionalTypeByteBuf.write(value.asset_sender, buf)
        _UniffiConverterOptionalTypeByteBuf.write(value.close_remainder_to, buf)


class PayTransactionFields:
    header: "TransactionHeader"
    receiver: "ByteBuf"
    amount: "int"
    close_remainder_to: "typing.Optional[ByteBuf]"
    def __init__(self, *, header: "TransactionHeader", receiver: "ByteBuf", amount: "int", close_remainder_to: "typing.Optional[ByteBuf]"):
        self.header = header
        self.receiver = receiver
        self.amount = amount
        self.close_remainder_to = close_remainder_to

    def __str__(self):
        return "PayTransactionFields(header={}, receiver={}, amount={}, close_remainder_to={})".format(self.header, self.receiver, self.amount, self.close_remainder_to)

    def __eq__(self, other):
        if self.header != other.header:
            return False
        if self.receiver != other.receiver:
            return False
        if self.amount != other.amount:
            return False
        if self.close_remainder_to != other.close_remainder_to:
            return False
        return True

class _UniffiConverterTypePayTransactionFields(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return PayTransactionFields(
            header=_UniffiConverterTypeTransactionHeader.read(buf),
            receiver=_UniffiConverterTypeByteBuf.read(buf),
            amount=_UniffiConverterUInt64.read(buf),
            close_remainder_to=_UniffiConverterOptionalTypeByteBuf.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiConverterTypeTransactionHeader.check_lower(value.header)
        _UniffiConverterTypeByteBuf.check_lower(value.receiver)
        _UniffiConverterUInt64.check_lower(value.amount)
        _UniffiConverterOptionalTypeByteBuf.check_lower(value.close_remainder_to)
